# kratos_v2

./: .env_example  .gitignore  AI_Helpers.md  Dockerfile  README.md  langgraph.json  output.md  requirements.txt  visulize.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  store.pckl
.vault/docs/: api_json.json
.vault/persistent/fin_lab/api/: alpha_intelligence.md  base.md  commodities.md  common.md  crypto.md  economics.md  forex.md  technical.md
.vault/persistent/fin_lab/examples/: basic_usage.py  chart_saving_examples.py  complex_analysis_examples.py
.vault/sessions/1760918014730.529/analysis/: peloton_pton_financial_analysis_report.md  pton_6month_data.csv  pton_company_overview.md  pton_financial_analysis.md  pton_moving_averages.txt  pton_technical_analysis_2025_10_17.md  pton_trend_indicators.txt
.vault/sessions/1760918014730.529/reports/: pton_comprehensive_technical_analysis.md  pton_fundamental_analysis_report.md
.vault/sessions/1760920554909.521/analysis/: amd_stock_analysis.md
.vault/sessions/1760920554909.521/data/: amd_historical_data.csv
.vault/sessions/1760920554909.521/reports/: amd_financial_news_summary_october_2024.md
.vault/sessions/1760921396274.3645/analysis/: amd_financial_data_summary.md  amd_technical_analysis_report.md
.vault/sessions/1760921396274.3645/reports/: AMD_Morningstar_Style_Report.md  amd_analysis_report_2025.md  amd_long_term_fundamental_analysis.md  amd_risk_assessment_2025.md  amd_stock_analysis_2025_10_17.md
.vault/sessions/1760923586795.686/analysis/: pton_analytics_summary.json  pton_insider_transactions.json  pton_news_sentiment_raw.json
.vault/sessions/1760923586795.686/reports/: PTON_analysis_report.md  pton_final_recommendation.md  pton_market_intelligence_report.md  pton_options_strategies.md  pton_technical_analysis_report.md
.vault/sessions/1760924274241.4387/analysis/: btc_news_sentiment.json
.vault/sessions/1760926119533.9465/reports/: amd_sma_analysis.txt
.vault/sessions/shared/templates/: asset.template.md  crypto.template.md  options.template.md  portfolio.template.md  stock.template.md
fin_lib/: README.md  pyproject.toml  requirements.txt  setup.py
fin_lib/docs/: API_REFERENCE.md  api_ref.json
fin_lib/docs/api/: api_json.json  base.md  commodities.md  crypto.md  fundamentals.md  options.md  sample_outputs.json  technical.md
fin_lib/src/fin_lib/: __init__.py  alpha_intelligence.py  base.py  commodities.py  core.py  crypto.py  economics.py  forex.py  fundamentals.py  options.py  technical.py
fin_lib/tests/: test_basic.py
kappa/: pyproject.toml  requirements.txt
kappa/config/: episodic.yml  semantic.yml
kappa/src/kappa/: __init__.py  memcore.py  memkappa.py
kratos/: agent.py  agent2.py  initmem.py  kai_raja.py  llm_factory.py  prompts.py  search_tools.py  tools.py
kratos-ui/: package.json
kratos-ui/agent/: requirements.txt
kratos-ui/agent/kratos/core/: graph.py
kratos-ui/agent/kratos/subagents/: __init__.py
kratos-ui/agent/kratos/tools/: __init__.py
kratos-ui/agent/tests/: conftest.py  test_repl_tools.py
kratos-ui/scripts/: setup-agent.sh
kratos-ui/src/app/: layout.tsx
kratos/core/: get_ticker.py  graph.py  middleware.py  utils.py
kratos/core/middleware/: logging_middleware.py  vault.py  vault_middleware.py
kratos/fin_tools/: __init__.py  base.py  forex.py  fundamentals.py
kratos/subagents/: __init__.py  agents.py  registry.py  system_prompts.py
kratos/subagents/prompts/: __init__.py  number_nerd.md  ochestrator.md  reporter.md  thinker.md
kratos/subagents/specs/: __init__.py  alpha_intelligence.py  codeact.py  commodities.py  core_stock.py  crypto.py  economics.py  final_report.py  forex.py  fundamentals.py  options.py  search.py  technicals.py
kratos/tools/: __init__.py  memory.py
kratos/tools/fin_tools/: alpha_intelligence.py  core.py  crypto.py  economics.py  options.py  technical.py
kratos/tools/rbase_tool/: __init__.py  rmarkdown_tool.py
kratos/tools/repl_tools/: __init__.py  code_tool.py
scripts/: setup_env.ps1  setup_env.sh
subagents/: codeact.yaml
tests/: test_subagents.py  test_vault.py  test_vault_middleware_unit.py
tests/integration/: test_repl_tools_integration.py  test_vault_integration.py  test_vault_middleware_integration.py
ui/: app.py
(+6 files in other folders)
