[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kappa"
version = "1.0.0"
description = "Hybrid memory library combining vector DBs and knowledge graphs for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kratos Financial Tools", email = "dev@kratos.ai"}
]
keywords = ["finance", "trading", "stocks", "forex", "crypto", "technical-analysis", "fundamental-analysis", "ai", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "chromadb>=1.3.4",
    "networkx>=3.5.0",
    "langchain>=1.0.0",
    "langchain-huggingface>1.0.0",
    "langchain-openai>=1.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kratos/mem-lib"
Documentation = "https://fin-lib.readthedocs.io/"
Repository = "https://github.com/kratos/fin_lib"
"Bug Tracker" = "https://github.com/kratos/fin_lib/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
